# qrcode-redirect

./: .gitignore  Dockerfile  Procfile  README.md  deploy.sh  local-run.sh  main.py  myutil.py  pyproject.toml  requirements.txt
templates/: gen.html  index.html
