[tool.poetry]
name = "qrcode-redirect"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
Pillow = "^9.5.0"
qrcode = "^7.4.2"
Flask = "^2.2.3"
gunicorn = "^20.1.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
